--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Vero fugit tenetur unde quam numquam commodi facere soluta 
                     delectus ullam quae. Molestiae facilis vel ea ipsum et 
-                    atque dicta in quod.</p>
+                    atque dicta int quod.</p>
             </div>
             <div class="column">
                 <img src="images/pic4.jpeg">
@@ -45,7 +45,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Vero fugit tenetur unde quam numquam commodi facere soluta 
                     delectus ullam quae. Molestiae facilis vel ea ipsum et 
-                    atque dicta in quod.</p>
+                    atque dicta int quod.</p>
             </div>
 
         </div>
